--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="Freight-Broker, unica, creative, html">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Freight-Broker | Template</title>
+<title>Bright Star</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -56,13 +56,10 @@
 <div class="row">
 <div class="col-lg-9 offset-lg-3">
 <ul class="header__top__widget">
-<li><span class="icon_phone"></span> +44 20 7930 8205</li>
-<li><span class="icon_pin"></span> 450 Strand, Charing Cross, London</li>
+<li><span class="icon_phone"></span> +1 234 567 8901</li>
+<li><span class="icon_pin"></span> Fairfax, VA, USA</li>
 </ul>
 <div class="header__top__right">
-<div class="header__top__right__auth">
-<a href="#"><span class="icon_profile"></span> Register or Sign in</a>
-</div>
 <div class="header__top__right__social">
 <a href="#"><span class="social_facebook"></span></a>
 <a href="#"><span class="social_twitter"></span></a>
@@ -77,33 +74,42 @@
 <div class="header__options">
 <div class="container">
 <div class="row">
-<div class="col-lg-3">
+<div class="col-lg-2">
 <div class="header__logo">
-<!--<a href="./index.html"><img src="img/logo.png" alt=""></a>-->
+<a href="./index.html"><img src="img/logo.png" alt="" style="height: 150px;"></a>
 </div>
 </div>
-<div class="col-lg-7">
+<div class="col-lg-10" style="padding-left: 100px;">
 <nav class="header__menu mobile-menu">
 <ul>
 <li class="active"><a href="./index.html">Home</a></li>
-<li><a href="./services.html">Services</a></li>
-<li><a href="./about.html">About</a></li>
-<li><a href="#">Pages</a>
+<li><a href="./about.html">About Us</a></li>
+<li><a href="./services.html">Services</a>
 <ul class="dropdown">
 <li><a href="./about.html">About</a></li>
 <li><a href="./services-details.html">Services Details</a></li>
 <li><a href="./blog-details.html">Blog Details</a></li>
 </ul>
 </li>
-<li><a href="./blog.html">Blog</a></li>
-<li><a href="./contact.html">Contacts</a></li>
+<li><a href="#">Testinomials</a>
+<ul class="dropdown">
+<li><a href="./Feedback.html">Feedback Survey</a></li>
+</ul>
+</li>
+<li><a href="./discount.html">Discounts</a></li>
+<li><a href="#">Service Areas</a>
+<ul class="dropdown">
+<li><a href="./about.html">About</a></li>
+<li><a href="./services-details.html">Services Details</a></li>
+<li><a href="./blog-details.html">Blog Details</a></li>
+</ul>
+</li>
+<li><a href="./fleet.html">Our Fleet</a></li>
+<li><a href="./career.html">Career</a></li>
+<li><a href="./contact.html">Booking</a></li>
+<li><a href="#">Brochure</a></li>
 </ul>
 </nav>
-</div>
-<div class="col-lg-2">
-<div class="search__option">
-<span class="icon_search search-switch"></span>
-</div>
 </div>
 </div>
 </div>
@@ -112,14 +118,14 @@
 </header>
 
 
-<section class="hero spad set-bg" data-setbg="img/hero.jpg">
+<section class="hero spad set-bg" data-setbg="img/hero1.jpg">
 <div class="container">
 <div class="row">
 <div class="col-lg-6">
 <div class="hero__text">
-<span class="hero__label">Freight broker</span>
-<h2>Awesome template for courier & bdelivery services</h2>
-<a href="#" class="primary-btn"><span>View services</span></a>
+<span class="hero__label">Bright Star</span>
+<h2>Fast and Reliable Ambulance Transportation</h2>
+<a href="/services.html" class="primary-btn"><span>View services</span></a>
 </div>
 </div>
 </div>
@@ -133,12 +139,12 @@
 <div class="col-lg-5 p-0">
 <div class="section-title">
 <span>What We do?</span>
-<h2>Welcome to the freight Broker we are the best.</h2>
+<h2>Welcome to the Bright Star Transportation, we are the best.</h2>
 </div>
 </div>
 <div class="col-lg-5 offset-lg-2 p-0">
 <div class="services__top__text">
-<p>For more than four decades, FreightBroker Logistics' world-class freight forwarding services
+<p>For more than four decades, Bright Star' world-class Transportation services
 have improved bottom lines across virtually every industry.</p>
 </div>
 </div>
@@ -152,7 +158,7 @@ have improved bottom lines across virtually every industry.</p>
 <div class="services__item__icon">
 <img src="img/services/si-1.png" alt="">
 </div>
-<h5>Air Freight</h5>
+<h5>Wheelchair Transport</h5>
 <p>Investment Assets Properties have ready several locations around the world to take your free
 listings for any luxury property you have.</p>
 <a href="#">Read More</a>
@@ -166,7 +172,7 @@ listings for any luxury property you have.</p>
 <div class="services__item__icon">
 <img src="img/services/si-2.png" alt="">
 </div>
-<h5>Ship Freight</h5>
+<h5>Strecher Transport</h5>
 <p>Investment Assets Properties have ready several locations around the world to take your free
 listings for any luxury property you have.</p>
 <a href="#">Read More</a>
@@ -180,7 +186,7 @@ listings for any luxury property you have.</p>
 <div class="services__item__icon">
 <img src="img/services/si-3.png" alt="">
 </div>
-<h5>RailWay Logistics</h5>
+<h5>Ambulatory Transport</h5>
 <p>Investment Assets Properties have ready several locations around the world to take your free
 listings for any luxury property you have.</p>
 <a href="#">Read More</a>
@@ -194,7 +200,7 @@ listings for any luxury property you have.</p>
 <div class="services__item__icon">
 <img src="img/services/si-4.png" alt="">
 </div>
-<h5>Ware Housing</h5>
+<h5>Stair-Lifter Chair</h5>
 <p>Investment Assets Properties have ready several locations around the world to take your free
 listings for any luxury property you have.</p>
 <a href="#">Read More</a>
@@ -221,9 +227,9 @@ listings for any luxury property you have.</p>
 <div class="counter__item">
 <img src="img/about/ci-1.png" alt="">
 <div class="counter__item__num">
-<h2 class="c_num">9123</h2>
+<h2 class="c_num">2500</h2>
 </div>
-<h5>Employees in Team</h5>
+<h5>Customers Served</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 ut labore et dolore magna aliqua.</p>
 </div>
@@ -232,10 +238,9 @@ ut labore et dolore magna aliqua.</p>
 <div class="counter__item">
 <img src="img/about/ci-2.png" alt="">
 <div class="counter__item__num">
-<h2 class="c_num">70102</h2>
-<strong>km</strong>
+<h2 class="c_num">2023</h2>
 </div>
-<h5>Kilometer Travel Weekly</h5>
+<h5>Working Since</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
  ut labore et dolore magna aliqua.</p>
 </div>
@@ -244,26 +249,16 @@ ut labore et dolore magna aliqua.</p>
 <div class="counter__item">
 <img src="img/about/ci-3.png" alt="">
 <div class="counter__item__num">
-<h2 class="c_num">1254</h2>
+<h2 class="c_num">4000</h2>
+<strong>+</strong>
 </div>
-<h5>Worldwide Clients</h5>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-ut labore et dolore magna aliqua.</p>
-</div>
-</div>
-<div class="col-lg-3 col-md-6 col-sm-6">
-<div class="counter__item">
-<img src="img/about/ci-4.png" alt="">
-<div class="counter__item__num">
-<h2 class="c_num">20254</h2>
-</div>
-<h5>Projects Done</h5>
+<h5>Successfull Trips</h5>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 ut labore et dolore magna aliqua.</p>
 </div>
 </div>
 </div>
-</div>
+<h5 style="text-align: center;color: orangered;">VA TRANSPORTATION HEALTHCARE PROVIDE MEDICAL TRANSPORT TO MANY HEALTHCARE PROVIDERS!</h5><br>
 <div class="partner__logo">
 <div class="row">
 <div class="col-lg-12">
@@ -278,7 +273,7 @@ ut labore et dolore magna aliqua.</p>
 <a href="#"><img src="img/about/partner-3.png" alt=""></a>
 </div>
 <div class="partner__logo__item">
-<a href="#"><img src="img/about/partner-4.png" alt=""></a>
+<a href="#"><img src="img/about/partner-4.JPEG" alt=""></a>
 </div>
 <div class="partner__logo__item">
 <a href="#"><img src="img/about/partner-5.png" alt=""></a>
@@ -286,10 +281,16 @@ ut labore et dolore magna aliqua.</p>
 <div class="partner__logo__item">
 <a href="#"><img src="img/about/partner-6.png" alt=""></a>
 </div>
+<div class="partner__logo__item">
+<a href="#"><img src="img/about/partner-7.png" alt=""></a>
+</div>
+<div class="partner__logo__item">
+<a href="#"><img src="img/about/partner-8.png" alt=""></a>
 </div>
 </div>
 </div>
 </div>
+</div> 
 </div>
 </section>
 
@@ -300,8 +301,8 @@ ut labore et dolore magna aliqua.</p>
 <div class="col-lg-6">
 <div class="chooseus__text">
 <div class="section-title">
-<span>Our Benefit</span>
-<h2>Why People Choose Us?</h2>
+<span>Serving Northern VA, Maryland and DC</span>
+<h2>WHY USE OUR NON-EMERGENCY MEDICAL TRANSPORT SERVICE?</h2>
 </div>
 <div class="row">
 <div class="col-lg-6 col-md-6 col-sm-6">
@@ -352,12 +353,12 @@ ut labore et dolore magna aliqua.</p>
 </div>
 </div>
 </div>
-<div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.png"></div>
+<div class="chooseus__pic set-bg" data-setbg="img/chooseus/chooseus-pic.jpg"></div>
 </div>
 </section>
 
 
-<section class="projects spad">
+<!--<section class="projects spad">
 <div class="container">
 <div class="row">
 <div class="col-lg-7">
@@ -425,13 +426,14 @@ your free listings for any luxury property you have.</p>
 </div>
 </div>
 </div>
-</section>
+</section>-->
+<br>
 
 
 <section class="testimonial spad set-bg" data-setbg="img/testimonial/testimonial-bg.jpg">
 <div class="container">
 <div class="row">
-<div class="col-lg-5">
+<div class="col-lg-12">
 <div class="testimonial__text">
 <div class="section-title">
 <span>Testimonials</span>
@@ -440,38 +442,47 @@ your free listings for any luxury property you have.</p>
 <div class="testimonial__slider owl-carousel">
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Wanted to reach out to praise Matt Nowakowski. Every time we have a critical need,
-Matt is there to help. He goes above and beyond all the time. Most recently, he
-assisted in expediting launch orders for (our retail client).”</p>
+<p>“Thank you for taking care of my grandmother for transportation to her doctor’s clinic. Everything went very smoothly..”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
 <img src="img/testimonial/ta-1.png" alt="">
 </div>
 <div class="testimonial__item__author__text">
-<h5>Eric Carson</h5>
-<span>CEO Of Colorlib</span>
+<h5>Andrew Jacobs</h5>
+<span>January 2021</span>
 </div>
 </div>
 </div>
 <div class="testimonial__item">
 <img src="img/testimonial/quote.png" alt="">
-<p>“Wanted to reach out to praise Matt Nowakowski. Every time we have a critical need,
-Matt is there to help. He goes above and beyond all the time. Most recently, he
-assisted in expediting launch orders for (our retail client).”</p>
+<p>“I needed to get my mother’s checked up. She cannot walk. I needed custom built vehicle. You guys did a good job. Recommended.”</p>
 <div class="testimonial__item__author">
 <div class="testimonial__item__author__pic">
 <img src="img/testimonial/ta-1.png" alt="">
 </div>
 <div class="testimonial__item__author__text">
-<h5>Steve Smith</h5>
-<span>CEO Of Colorlib</span>
+<h5>Smitha Patel</h5>
+<span>June 2021</span>
+</div>
+</div>
+</div>
+<div class="testimonial__item">
+<img src="img/testimonial/quote.png" alt="">
+<p>“Very few people do their work with excellence and compassion. This company is a high value on these things. Highly recommend!”</p>
+<div class="testimonial__item__author">
+<div class="testimonial__item__author__pic">
+<img src="img/testimonial/ta-1.png" alt="">
+</div>
+<div class="testimonial__item__author__text">
+<h5>Don Ward</h5>
+<span>July 2022</span>
 </div>
 </div>
 </div>
 </div>
 </div>
 </div>
-<div class="col-lg-5 offset-lg-2">
+<!--<div class="col-lg-5 offset-lg-2">
 <div class="request__form">
 <div class="section-title">
 <span>Contacts Us</span>
@@ -501,7 +512,7 @@ assisted in expediting launch orders for (our retail client).”</p>
 </div>
 </form>
 </div>
-</div>
+</div>-->
 </div>
 </div>
 </section>
@@ -513,7 +524,7 @@ assisted in expediting launch orders for (our retail client).”</p>
 <div class="col-lg-12 text-center">
 <div class="section-title">
 <span>Insight and Trends</span>
-<h2>Latest news company</h2>
+<h2>Our Recent Blogs</h2>
 </div>
 </div>
 </div>
@@ -540,7 +551,7 @@ be a result</p>
 </div>
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="latest__item">
-<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-2.jpg">
+<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-2.avif">
 <div class="latest__item__pic__inner">
 <div class="label"><span>Guides</span></div>
 <h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
@@ -560,7 +571,7 @@ be a result</p>
 </div>
 <div class="col-lg-4 col-md-6 col-sm-6">
 <div class="latest__item">
-<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-3.jpg">
+<div class="latest__item__pic set-bg" data-setbg="img/latest/latest-3.avif">
 <div class="latest__item__pic__inner">
 <div class="label"><span>Guides</span></div>
 <h5>Expert Tips for Managing Hypoglycemia Lorem ipsum dolor</h5>
