--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="zxx">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Freight-Broker Template">
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="keywords" content="Freight-Broker, unica, creative, html">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Bright Star</title>
@@ -162,7 +162,7 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
                 <option selected>Choose...</option>
                 <option>One-way</option>
                 <option>Round Trip</option>
-              </select>
+              </select><br>
             </div>
             <div class="form-group" style="padding-top: 2%;">
               <label for="exampleInputEmail1">Email*</label>
@@ -175,14 +175,14 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
             <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput5">Which facilities do you need during tansportation? *</label>
+              <label for="exampleInput5">Which facilities do you need during tansportation? *</label><br>
               <select name="Facilily Type" class="form-control form-control-lg">
                 <option selected>Wheel Chair</option>
                 <option>Stretcher</option>
                 <option>Wheel Chair & Stretcher</option>
                 <option>None</option>
               </select>
-            </div>
+            </div><br>
             <div class="form-group" style="padding-top: 2%;">
               <label for="exampleInput6">Pickup time *</label>
               <input type="text" name="Time of Pickup" class="form-control form-control-lg" id="exampleInput6" placeholder="enter time" required>
@@ -204,33 +204,33 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
             </div>
             <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput10">Is the patient COVID Positive or has been exposed to the virus in the past 2 weeks? *</label>
+              <label for="exampleInput10">Is the patient COVID Positive or has been exposed to the virus in the past 2 weeks? *</label><br>
               <select name="COVID:" class="form-control form-control-lg">
                 <option selected>No</option>
                 <option>Yes</option>
               </select>
-            </div>
+            </div><br>
             <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput11">Does passenger need oxygen tank? (Oxygen must be administered by the caregiver) *</label>
+              <label for="exampleInput11">Does passenger need oxygen tank? (Oxygen must be administered by the caregiver) *</label><br>
               <select name="Oxygen tank Requirement" class="form-control form-control-lg">
                 <option selected>No</option>
                 <option>Yes</option>
               </select>
-            </div>
+            </div><br>
             <div class="form-group" style="padding-top: 2%;">
-              <label for="exampleInput12">Are there any stairs involved to bring the patient downstairs? If yes, how many? *</label>
+              <label for="exampleInput12">Are there any stairs involved to bring the patient downstairs? If yes, how many? *</label><br>
               <input type="text" name="Stairs" class="form-control form-control-lg" id="exampleInput12" placeholder="" required>
               <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-            </div>   
+            </div> <br>  
             <div class="form-group" style="padding-top: 2% ;">
-              <label for="exampleInput13">Who is paying for the trip?</label>
+              <label for="exampleInput13">Who is paying for the trip?</label><br>
               <select name="Payment by" class="form-control form-control-lg">
                 <option selected>Private Party</option>
                 <option>Facilily</option>
                 <option>other</option>
               </select>
             </div>  
-            <br>
+            <br><br>
             <p>Comments</p>
             <div class="form-floating">
               <textarea class="form-control" name="Comments" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
@@ -239,10 +239,10 @@ window.__mirage2 = {petok:"lDUAOdplYdruVQxZj7XRJuLrXUMn19HAOgr1TOsupBA-1800-0"};
             <p>Please note that by submitting this inquiry form, you agree to our <a href="#">privacy policy</a> and <a href="#">refund policy</a></p>    
             <button type="submit" class="btn btn-success">Submit</button>         
           </form>
-        </div>
+        </div><br>
 <div class="container">
-<div class="row">
-<div class="col-lg-6 col-md-6">
+
+
 <div class="contact__text">
 <div class="section-title">
 <span>Information</span>
@@ -280,8 +280,8 @@ strict attention.</p>
 </li>
 </ul>
 </div>
-</div>
-<div class="col-lg-6 col-md-6">
+
+<!--
 <div class="contact__form">
 <div class="section-title">
 <span>Get a quote</span>
@@ -303,9 +303,9 @@ strict attention.</p>
 </div>
 </div>
 </form>
-</div>
-</div>
-</div>
+</div>-->
+
+
 </div>
 </section>
 
@@ -403,14 +403,5 @@ suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel 
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-<script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-23581568-13');
-    </script>
-<script defer src="https://static.cloudflareinsights.com/beacon.min.js/v2cb3a2ab87c5498db5ce7e6608cf55231689030342039" integrity="sha512-DI3rPuZDcpH/mSGyN22erN5QFnhl760f50/te7FTIYxodEF8jJnSFnfnmG/c+osmIQemvUrnBtxnMpNdzvx1/g==" data-cf-beacon='{"rayId":"7e860efece04829c","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2023.4.0","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
